增加采集模式

--- a/web/moviespider/caiji.config
+++ b/web/moviespider/caiji.config
@@ -1,6 +1,7 @@
 {
     "http://www.okzy.co/": {
         "label":"okzy",
+        "mode":1,
         "useful_url": "detail",
         "nextpage":"?m=vod-index-pg-%d.html",
         "nextpagelabel":"//a[@class='pagelink_a']",
@@ -29,6 +30,7 @@
     },
     "http://www.zuidazy5.com/": {
         "label":"zuidazy",
+        "mode":1,
         "useful_url": "detail",
         "nextpage":"?m=vod-index-pg-%d.html",
         "nextpagelabel":"//a[@class='pagelink_a']",
@@ -55,12 +57,26 @@
             "download": "//div[@id='down_1']//li"
         }
     },
+        "http://wolongzy.net/": {
+        "label":"wolong",
+        "mode":0,
+        "useful_url": "detail",
+        "nextpage":"?page=%d",
+        "nextpagelabel":"//ol[@class='pagination']//a",
+        "target_xpath": {
+            "info":"//div",
+            "yun1": "//div[@id='play_2']//li",
+            "m3u8": "//div[@id='play_1']//li",
+            "download": "//div[@id='down_1']//li"
+        }
+    },
     "https://www.rrzyw.cc/": {
         "label":"rrzy",
         "useful_url": "detail",
         "nextpage":"index.php/index/index/page/%d.html",
         "target_xpath": {
             "name":"//div[@class='stui-content__detail']//h1",
+            "img":"//img[@class='img-responsive']/attribute::src",
             "updatet":"//span[@class='text-red hidden-xs']",
             "m3u8": "//div[@id='playlist']//li//span",
             "download": "//div[@id='down_1']//li"
