--- a/web/moviespider/caiji.config
+++ b/web/moviespider/caiji.config
@@ -61,6 +61,7 @@
         "nextpage":"index.php/index/index/page/%d.html",
         "target_xpath": {
             "name":"//div[@class='stui-content__detail']//h1",
+            "img":"//img[@class='img-responsive']/attribute::src",
             "updatet":"//span[@class='text-red hidden-xs']",
             "m3u8": "//div[@id='playlist']//li//span",
             "download": "//div[@id='down_1']//li"
